fix methods in StreamPractice nad create a new method in CandidateValidator